--- a/ztfnuclear/templates/home.html
+++ b/ztfnuclear/templates/home.html
@@ -17,7 +17,7 @@
    
 
 <div class="d-grid gap-2 col-4 mx-auto">
-  <a class="btn btn-outline-secondary btn-lg" aria-current="page" href="{{ url_for('login') }}">Login</a>
+  <a class="btn btn-outline-secondary btn-lg" aria-current="page" href="{{ url_for('transient_list') }}">Transient list</a>
 </div>
 
 {% endblock %}
