--- a/ztfnuclear/templates/navbar.html
+++ b/ztfnuclear/templates/navbar.html
@@ -9,21 +9,24 @@
           </button>
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto mb-2 mb-lg-0">
-              {% if current_user.is_authenticated %}
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="{{ url_for('logout') }}">Logout</a>
-                </li>
-              {% else %}
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="{{ url_for('login') }}">Login</a>
-                </li>
-              {% endif%}
+
 
             <ul class="navbar-nav ml-auto">
 
               <li class="nav-item ">
+                <a class="nav-link" href="{{ url_for('transient_list')}}">All Transients</a>
+              </li>
+
+              <li class="nav-item ">
+                <a class="nav-link" href="{{ url_for('flaring_transient_list')}}">Flaring Transients</a>
+              </li>
+
+              <li class="nav-item ">
                 <a class="nav-link" href="{{ url_for('transient_random')}}">Random</a>
+              </li>
+
+              <li class="nav-item ">
+                <a class="nav-link" href="{{ url_for('flaring_transient_random')}}">Flaring Random</a>
               </li>
 
             </ul>
