--- a/ztfnuclear/templates/transient_list.html
+++ b/ztfnuclear/templates/transient_list.html
@@ -51,11 +51,11 @@
       $('#data').DataTable({
         columns: [
           null,
-          {searchable: true},
           {orderable: true, searchable: false},
           {orderable: true, searchable: false},
-          {orderable: false, searchable: true},
-          null],
+          {orderable: true, searchable: false},
+          {orderable: true, searchable: false},
+          {orderable: true, searchable: false}],
       });
     });
   </script>
