--- a/ztfnuclear/templates/transient.html
+++ b/ztfnuclear/templates/transient.html
@@ -13,7 +13,7 @@
             {% if transient.tns_name != None %}
             <h1> Inspect {{ transient.ztfid }} ({{ transient.tns_name }}) </h1>
             {% else %}
-            {{ transient.ztfid }}
+            <h1> Inspect {{ transient.ztfid }} </h1>
             {% endif %} 
         </div>
 
