--- a/ztfnuclear/templates/login.html
+++ b/ztfnuclear/templates/login.html
@@ -8,8 +8,8 @@
 <div class="shadow p-3 mb-5 bg-body rounded">
     <form method="POST">
         {{ form.hidden_tag() }}
-        {{ form.username.label(class="form-label") }}
-        {{ form.username (class="form-control") }}
+        {{ form.name.label(class="form-label") }}
+        {{ form.name (class="form-control") }}
       <br/>
       <br/>
         {{ form.password.label(class="form-label") }}
