--- a/ztfnuclear/templates/register.html
+++ b/ztfnuclear/templates/register.html
@@ -7,14 +7,14 @@
 
   <form method="POST">
     {{ form.hidden_tag() }}
-    {{ form.name.label(class="form-label") }}
-    {{ form.name (class="form-control") }}
+    {{ form.username.label(class="form-label") }}
+    {{ form.username (class="form-control") }}
     <br/>
-    {{ form.password_hash.label(class="form-label") }}
-    {{ form.password_hash(class="form-control") }}
+    {{ form.password.label(class="form-label") }}
+    {{ form.password(class="form-control") }}
     <br/>
-    {{ form.password_hash_matched.label(class="form-label") }}
-    {{ form.password_hash_matched(class="form-control") }}
+    {{ form.password2.label(class="form-label") }}
+    {{ form.password2(class="form-control") }}
 
     <br/>
     {{ form.submit(class="btn btn-secondary") }}
