--- a/ztfnuclear/templates/home.html
+++ b/ztfnuclear/templates/home.html
@@ -10,10 +10,21 @@
   </div>
 </div>
 
+<br>
+
+{% if current_user.is_authenticated %}
+<div class="progress"  style="height: 20px;">
+  <div class="progress-bar bg-primary" role="progressbar"
+    style="width: {{ user_rate_percentage }}%;"
+    aria-valuenow="12"
+    aria-valuemin="0" aria-valuemax="100">
+    {{ "{:,.1f}".format(user_rate_percentage) }}%
+  </div>
+</div>
+{% endif %}
 
 <br>
-<br>
-<br>
+
    
 
 <div class="d-grid gap-2 col-4 mx-auto">
