--- a/ztfnuclear/templates/navbar.html
+++ b/ztfnuclear/templates/navbar.html
@@ -1,4 +1,4 @@
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-dark navbar-expand" style="background-color: #6c3483;">
 
       <div class="container-fluid">
           <a class="navbar-brand" href="{{ url_for('home')}}">ZTF Nuclear Sample </a>
@@ -18,7 +18,7 @@
               </li>
 
               <li class="nav-item ">
-                <a class="nav-link" href="{{ url_for('flaring_transient_list')}}">Flaring Transients</a>
+                <a class="nav-link" href="{{ url_for('flaring_transient_list')}}">💥 Flaring Transients</a>
               </li>
 
               <li class="nav-item ">
@@ -26,8 +26,14 @@
               </li>
 
               <li class="nav-item ">
-                <a class="nav-link" href="{{ url_for('flaring_transient_random')}}">Flaring Random</a>
+                <a class="nav-link" href="{{ url_for('flaring_transient_random')}}">💥 Flaring Random</a>
               </li>
+
+              {% if current_user.is_authenticated %}
+              <li class="nav-item ">
+                <a class="nav-link" href="{{ url_for('list_interesting')}}">Interesting</a>
+              </li>
+              {% endif %}
 
             </ul>
 
