--- a/ztfnuclear/templates/transient.html
+++ b/ztfnuclear/templates/transient.html
@@ -16,15 +16,22 @@
 
 
         <div class="col-auto my-2">
-          <a class="btn btn-outline-secondary" href="http://skipper.caltech.edu:8080/cgi-bin/growth/view_source.cgi?name={{ transient.ztfid }}" target="_blank">
+          <a class="btn btn-outline-dark" href="http://skipper.caltech.edu:8080/cgi-bin/growth/view_source.cgi?name={{ transient.ztfid }}" target="_blank">
              See on Growth
           </a>
         </div>
         <div class="col-auto my-2">
-          <a class="btn btn-outline-primary" href="https://fritz.science/source/{{ transient.ztfid }}" target="_blank">
+          <a class="btn btn-outline-dark" href="https://fritz.science/source/{{ transient.ztfid }}" target="_blank">
              See on Fritz
           </a>
         </div>
+        {% if transient.tns_name != None %}
+        <div class="col-auto my-2">
+          <a class="btn btn-outline-dark" href="https://www.wis-tns.org/object/{{ transient.tns_name[2:] }}" target="_blank">
+             See on TNS
+          </a>
+        </div>
+        {% endif %}
     </div>
 
 </div>
@@ -44,11 +51,19 @@
             </h4>
         </div>
     {% endif %}
+    {% if transient.get_crossmatch_info() != None %}
         <div class="col-auto me-auto">
             <h4 style="color:#A9A9A9;">
-              Crossmatch: {{ transient.crossmatch_info }}
+              Crossmatch: {{ transient.get_crossmatch_info() }}
             </h4>
         </div>
+    {% else %}
+        <div class="col-auto me-auto">
+            <h4 style="color:#A9A9A9;">
+              z: --- 
+            </h4>
+        </div>
+    {% endif %}
     {% if 'fritz_class' in transient.meta.keys() %}
         <div class="col-auto me-auto">
             <h4 style="color:#A9A9A9;">
