--- a/ztfnuclear/templates/transient_list.html
+++ b/ztfnuclear/templates/transient_list.html
@@ -3,6 +3,7 @@
 {% block title %} Transient list {% endblock %}
 
 {% block content %}
+<br>
 
 <table id="data" class="table table-hover">
     <thead>
@@ -74,9 +75,9 @@
           null,
           {orderable: true, searchable: false},
           {orderable: true, searchable: false},
-          {orderable: true, searchable: false},
-          {orderable: true, searchable: false},
-          {orderable: true, searchable: false},
+          {orderable: false, searchable: true},
+          {orderable: false, searchable: true},
+          {orderable: false, searchable: true},
           {orderable: true, searchable: false},
           {orderable: true, searchable: false}],
       });
