--- a/ztfnuclear/templates/navbar.html
+++ b/ztfnuclear/templates/navbar.html
@@ -32,7 +32,10 @@
 
               {% if current_user.is_authenticated %}
               <li class="nav-item ">
-                <a class="nav-link" href="{{ url_for('list_interesting')}}">Interesting</a>
+                <a class="nav-link" href="{{ url_for('list_interesting')}}">🟢Interesting</a>
+              </li>
+              <li class="nav-item ">
+                <a class="nav-link" href="{{ url_for('list_maybe')}}">🟡Maybe</a>
               </li>
               {% endif %}
 
