--- a/ztfnuclear/templates/home.html
+++ b/ztfnuclear/templates/home.html
@@ -28,7 +28,7 @@
    
 
 <div class="d-grid gap-2 col-4 mx-auto">
-  <a class="btn btn-outline-secondary btn-lg" aria-current="page" href="{{ url_for('flaring_transient_random') }}">💥 Random IR flaring transient</a>
+  <a class="btn btn-outline-secondary btn-lg" aria-current="page" href="{{ url_for('flaring_transient_random') }}">💥 Random unrated IR flaring transient</a>
 </div>
 
 {% endblock %}
