IRSA non-diff photometry plots are now generated and displayed on the transient page

--- a/ztfnuclear/templates/transient.html
+++ b/ztfnuclear/templates/transient.html
@@ -151,4 +151,11 @@
     <img src='data:image/png;base64,{{ lcplot }}' />
   </div">
 
+  {% if plot_irsa == True %}
+  <br>
+  <div class="row justify-content-md-center">
+    <img src='data:image/png;base64,{{ lcplot_irsa }}' />
+  </div">
+  {% endif %}
+
 {% endblock %}
