--- a/ztfnuclear/templates/transient.html
+++ b/ztfnuclear/templates/transient.html
@@ -106,7 +106,7 @@
                     </h4>
             {% else %}
                     <h4 style="color:#A9A9A9;">
-                      z: --- 
+                      Crossmatch: --- 
                     </h4>
             {% endif %}
         </div>
