--- a/ztfnuclear/templates/transient.html
+++ b/ztfnuclear/templates/transient.html
@@ -14,7 +14,7 @@
             {% endif %} 
         </div>
 
-        <div class="col-auto my-2">
+        <div class="col-auto me-auto my-2">
             <form method="post" action="/rate/{{ transient.ztfid }}" >
 
                 <div class="btn-group" role="group" aria-label="Basic example">
