--- a/ztfnuclear/templates/base.html
+++ b/ztfnuclear/templates/base.html
@@ -15,6 +15,8 @@
     <title>{% block title %} ZTF Nuclear Sample {% endblock %}</title>
   </head>
 <body>
+    
+<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 
 
 
