--- a/ztfnuclear/templates/transient_list.html
+++ b/ztfnuclear/templates/transient_list.html
@@ -80,8 +80,8 @@
         "pageLength": 50,
         columns: [
           null,
-          {orderable: true, searchable: false},
           {orderable: false, searchable: false},
+          {orderable: true, searchable: true},
           {orderable: true, searchable: false},
           {orderable: false, searchable: true},
           {orderable: false, searchable: true},
